fix missing border

--- a/stylesheat.css
+++ b/stylesheat.css
@@ -23,7 +23,7 @@ ul{
 }
 
 #mainDiv{
- width:100%
+ width:100%;
  border: 3px solid black;
 }
 
